--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 site.db
 .idea/
-!static/profile_pics/default.png
-static/profile_pics/*
+/flaskblog/static/profile_pics/*
+!/flaskblog/static/profile_pics/default.png
+
